@@ -10,7 +10,9 @@ Release 1.3.6p2 (2010-01-xx)
 - fixed SF# 2919461: Context ignores parameter cypherList
 - removed an unused enum from RSACipherImpl.cpp (Crypto)
 - integrated a new expat patch for CVE-2009-3560.
-
+- fixed SF# 2926458: SSL Context Problem. The Poco::Net::Context
+  class now makes sure that OpenSSL is properly initialized.
+  
 
 Release 1.3.6p1 (2009-12-21)
 ============================
@@ -1173,4 +1175,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.3/dist/CHANGELOG#76 $
+$Id: //poco/1.3/dist/CHANGELOG#77 $
